# simple_rebound

./: .gitignore  README.md  pyproject.toml  script.py  setup.py
simple_rebound/: __init__.py  particle.py  simulation.py
src/: collision.c  core_module.c  gravity.c  integrator.c  integrator_ias15.c  integrator_mercurius.c  integrator_whfast.c  particle.c  simple_rebound.h  simulation.c  transformations.c
